tests/errors/compiler/float_in_condition/float_in_if.c
void main()
{
	if (1.2)
	{
		print(1.2);
	}

	float a = 1.1;

	if (a)
	{
		print(a);
	}
}
